# sat-solver

./: .codedocs  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  doxyfile  mkdocs.yml
docs/: ac-3-implementation.md  ac-3.md  implication-notes.md  overview.md  performance.md  todo.md  usage.md
src/: CMakeLists.txt
src/c/: CMakeLists.txt  Makefile  imp-matrix.c  imp-matrix.h  main.c  queue.c  queue.h  sat-expression.c  sat-expression.h  sat_expression_parser.y  sat_expression_scanner.l  satsolver.h
src/c/parser/: sat-expression-parser.y  sat-expression-scanner.l
tests/: 000-simple.txt  001-nesting.txt  002-contradiction.txt  003-long-propagate.txt  004-brackets.txt  and.txt  eq-1.txt  eq.txt  nor.txt  not-1.txt  not.txt  or-1.txt  or-2.txt  or.txt  xor.txt
